[project]
name = "the_roadmapper"
version = "0.1.0"
description = "The_roadmapper using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]>=1.14.0,<1.14.7",
]

[project.scripts]
the_roadmapper = "the_roadmapper.main:run"
run_crew = "the_roadmapper.main:run"
train = "the_roadmapper.main:train"
replay = "the_roadmapper.main:replay"
test = "the_roadmapper.main:test"
run_with_trigger = "the_roadmapper.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
